# recruiter-mvp

./: docker-compose.yml
backend/: .env.example  main.py  pyproject.toml  test_auth_rbac.py  test_coordinator.py  test_evaluator.py  test_interviewer.py  test_matcher.py  test_upload.py
backend/agentic_recruitment_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/agents/: __init__.py  _llm.py  coordinator.py  evaluator.py  interviewer.py  matcher.py  vectorizer.py
backend/app/api/: __init__.py  candidates.py  interviews.py  jobs.py  realtime.py  realtime_ws.py  ws.py
backend/app/core/: auth.py  config.py  realtime.py
backend/app/database/: session.py
backend/app/models/: db.py  schemas.py
backend/app/services/: email.py  pipeline.py  state.py
backend/scripts/: init.sql  supabase_recruiter_trigger.sql  supabase_rls.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/Pages/: AdminDashboard.jsx  Application.jsx  CandidateDashboard.jsx  CandidatePortal.jsx  CandidateProfile.jsx  Dashboard.jsx  Home.jsx  Jobs.jsx  JobsDetailsPage.jsx  Login.jsx  RecruiterDashboard.jsx  RecruiterProfile.jsx  Signup.jsx
frontend/src/components/: CandidateUpload.jsx  CodeEditor.jsx  DashboardRouter.jsx  Features.jsx  Hero.jsx  InterviewRoom.jsx  Navbar.jsx  ProtectedRoute.jsx  RecruiterDashboard.jsx  ScorecardDrawer.jsx  Trust.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useCodeChannel.js  useRealtime.js
frontend/src/services/: api.js  authHeader.js  supabase.js
